[gd_scene load_steps=3 format=3 uid="uid://5itvtg0f7dn4"]

[ext_resource type="Script" path="res://scripts/window.gd" id="1_hpaao"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2c40q"]
radius = 72.0069

[node name="window" type="Area2D"]
script = ExtResource("1_hpaao")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2c40q")

[node name="window_sound" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
